--- a/templates/npm-js/package.json
+++ b/templates/npm-js/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "dependencies": {
-    "mocha": "10.7.3"
+    "mocha": "10.7.3",
+    "chai": "^5.1.1"
   },
   "scripts": {
     "test": "mocha"
