--- a/templates/npm-ts/package.json
+++ b/templates/npm-ts/package.json
@@ -11,7 +11,8 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "mocha": "10.7.3"
+    "mocha": "10.7.3",
+    "chai": "^5.1.1"
   },
   "scripts": {
     "test": "mocha"
